fix horizontal scroll via header title width

--- a/joebartel/_sass/main.scss
+++ b/joebartel/_sass/main.scss
@@ -1,6 +1,6 @@
-// @import url('https://fonts.googleapis.com/css?family=Actor:400|Flamenco:400');
+// // @import url('https://fonts.googleapis.com/css?family=Actor:400|Flamenco:400');
 
-@import url('https://fonts.googleapis.com/css?family=Actor:400|Gothic+A1:900');
+// @import url('https://fonts.googleapis.com/css?family=Actor:400|Gothic+A1:900');
 
 html {font-size: 100%;} /*16px*/
 
@@ -70,7 +70,7 @@ header {
         display: inline-block;
         margin: 2em auto 0 auto;
         text-align: center;
-        width: 100vw;
+        width: 98vw;
 
         .title-link {
             color: white;
